package de.fhmaze.engine.action.result;

public non-sealed interface FailureActionResult extends ActionResult {}
