package de.fhmaze.engine.action.result;

// non-sealed = alle Klassen dürfen wieder erben
public non-sealed interface SuccessActionResult extends ActionResult {}
